# RAGDemo

./: Lanzar FastAPI.txt  README.md  app.py  pyproject.toml
scripts/: main.py
scripts/api/: dependencies.py  main.py
scripts/api/routers/: rag_routes.py
scripts/backend/document_processing/: document_embedder.py  document_loader.py  document_splitter.py  upload_file.py  vector_store.py
scripts/backend/models/: rag.py
scripts/backend/query_processing/: query_processor.py  response_generator.py  retriever.py
scripts/document_processing/: document_embedder.py  document_loader.py  document_splitter.py  upload_file.py  vector_store.py
scripts/models/: rag.py
